2007-09-02  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapigen/Makefile.am, vapigen/valavapicheck.vala: adding vapicheck 
	as tool to verify Vala bindings. currently only .metadata files are
	checked for unresolved symbols.

2007-09-02  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/gtksourceview-2.0/gtksourceview-2.0.gidl,
	  vapi/packages/gtksourceview-2.0/gtksourceview-2.0.metadata,
	  vapi/gtksourceview-2.0.vala: regenerated for release 1.90.4

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vapigen/gidlgen/gapi2xml.pl, vapigen/gidlgen/gidlgen.in: avoid
	  unnecessary xml_pp dependency, patch by Alberto Ruiz, fixes bug 472658

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vapigen/gidlgen/gidlgen.in: improve gidlgen command-line options,
	  patch by Alberto Ruiz, fixes bug 472646

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: fix internal warnings on syntax errors

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vapi/curses.vala: use subtyping, patch by Ed Schouten

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valalockable.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratorinvocationexpression.vala,
	  gobject/valacodegeneratormemberaccess.vala,
	  gobject/valacodegeneratormethod.vala, compiler/valacompiler.vala:
	  fix implicit casts to support non-GObject classes, enable run-time
	  checks by default, fixes bug 472446

2007-09-01  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/pango/pango.metadata: mark
	  pango_glyph_item_letter_space.log_attrs and
	  pango_get_log_attrs.log_attrs as arrays
	* vapi/pango.vala: regenerated

2007-09-01  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:
	  gtk_init_with_args.entries as array
	* vapi/packages/pango/pango.metadata:
	  mark PangoLogAttr as value type
	* vapi/gtk+-2.0.vala, vapi/pango.vala:
	  regenerated
