@@ -1,0 +1,1 @@
+testing function pointers: 1 2 3
